--- a/New.html
+++ b/New.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello
-        
-    </h2>
-    <h2>THis is testing _1</h2>
+    <h1>This is my first project.</h1>
 </body>
 </html>
